Fix for conversation serializer.
