# swagger.yaml
@@ -1506,7 +1506,7 @@ definitions:
       address:
         $ref: '#/definitions/Address'
   ChatMessage:
-    title: Last message
+    title: Content
     required:
       - appointmentRequest
       - text
@@ -1517,14 +1517,8 @@ definitions:
       text:
         type: string
         minLength: 1
-  Conversation:
-    type: object
-    properties:
-      user:
-        $ref: '#/definitions/UserSnippet'
-      lastMessage:
-        $ref: '#/definitions/ChatMessage'
   Message:
+    title: Last message
     required:
       - type
     type: object
@@ -1547,6 +1541,13 @@ definitions:
         readOnly: true
       content:
         $ref: '#/definitions/ChatMessage'
+  Conversation:
+    type: object
+    properties:
+      user:
+        $ref: '#/definitions/UserSnippet'
+      lastMessage:
+        $ref: '#/definitions/Message'
   Device:
     required:
       - token
